rakuten/ensure-storageclass-replication-3/block-replication-change.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-replication-change
  annotations:
    policies.kyverno.io/title: Block Replication Change
    policies.kyverno.io/category: Robin CNS
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: StorageClass
    policies.kyverno.io/description: >-
      This policy prevents the reduction of the replication factor in StorageClasses.
      It ensures that the replication factor remains at 3 by blocking any updates
      that attempt to lower it, thereby maintaining data redundancy and resilience.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: prevent-replication-reduction
      match:
        any:
          - resources:
              kinds:
                - StorageClass
      preconditions:
        all:
          - key: "{{ request.operation }}"
            operator: Equals
            value: "UPDATE"
      context:
        - name: oldReplication
          apiCall:
            method: GET
            urlPath: "/apis/storage.k8s.io/v1/storageclasses/{{ request.object.metadata.name }}"
            jmesPath: "parameters.replication"
      validate:
        message: "StorageClass replication factor cannot be reduced from 3."
        deny:
          conditions:
            all:
              - key: "{{ oldReplication }}"
                operator: Equals
                value: "3"
              - key: "{{ request.object.parameters.replication }}"
                operator: NotEquals
                value: "3"
