rakuten/ensure-storageclass-replication-3/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-replication-change
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
